fix bug with firefox collapsing distortions

--- a/magnolia/html/HTML5Application/public_html/alt.css
+++ b/magnolia/html/HTML5Application/public_html/alt.css
@@ -44,7 +44,6 @@ body#index {
 .content {
     height: 75%;
     width: 100%;
-    margin-top: 3%;
 }
 
 .content iframe {
@@ -139,6 +138,8 @@ body#index {
 
 ul {
     list-style: none;
+    width: 100%;
+    height: 2.2%;
 }
 
 li {
@@ -161,7 +162,7 @@ ul a:active {
 ul#indexTitle {
     margin-left: 15%;
     width: 66%;
-    margin-top: -5%;
+    margin-top: -4%;
     position: relative;
     z-index: 2;
 }
@@ -174,7 +175,20 @@ ul#indexTitle li {
     border: solid 2px #FFFFFF;
     text-align: center;
     background-color: rgba(181, 134, 185, 0.59);
+    -moz-box-sizing:    border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing:        border-box;
 }
+
+ul#indexTitle li:hover {
+    border: solid 2px #e5e492;
+    background-color: rgba(185, 133, 164, 0.54);
+}
+ul#indexTitle li:active {
+    border: solid 2px #b0a94d;
+    background-color: rgba(185, 114, 145, 0.55);
+}
+
 #indexTitle a:active{
     color:#fff;
 }
@@ -184,4 +198,11 @@ ul#indexTitle li {
 
 .advertisement {
     border: 2px solid #f4c01c;
+}
+
+.indent
+{
+    height: 2%;
+    width: 100%;
+    position: relative;
 }
